# local-tool-proxy

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  benchmark.py  demo.py  gptfixes.prompt  nextgrok.prompt  opencode.json  pyproject.toml  results-gemma-and-agentic-testing.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  constitution.md  demo.md  experiment-log.md  model-stops-using-tools-analysis.md  testing.md  use-cases.md
docs/adr/: 0001-project-scope.md  0002-compat-mode-first.md  0003-stabilize-mode-is-opt-in.md  0004-non-stream-tool-path.md
docs/history/: 2026-05-26-gemma4-agentic-testing.md  README.md  gptfixes.prompt  nextgrok.prompt
eval/: run_real_opencode_eval.py
eval/manual/: README.md  test_rigid_prompt.py  test_task02_via_proxy.py  test_with_clean_task.py
eval/results/: summary_stabilize_soft_2026-05-27.md
prompts/: rigid_tictactoe_example.txt
prompts/rigid_tests/: test_A_multi_tool_stress.txt  test_B_structured_cli.txt
proxy/: README.md  TESTING.md  collapse.py  collapse_report.py  planner.py  requirements.txt  rewriters.py  server.py  stabilizer.py  start.sh  test_rewrite_mock.py  test_rigid_prompt.py  test_task02_via_proxy.py  test_with_clean_task.py
tasks/: task-01-scaffold-cli.md  task-02-bugfix.md
tests/: test_claim_boundaries.py  test_collapse_observe.py  test_integration_mock.py  test_phase1_observe.py  test_phase2_stabilize.py  test_phase3_planner.py  test_phase4_flags_and_safety.py  test_reason_codes.py  test_rewriters.py  test_rewriters_phase2.py  test_server_public_surface.py  test_smoke_fake_upstream.py
tests/fixtures/model_outputs/: json_in_content.json  prose_false_positive.txt  tool_name_jsonish.txt  xml_tool_code.txt
