[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tool-proxy"
version = "0.1.0"
description = "OpenAI-compatible tool-call repair proxy for Ollama and other local models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Cameron Jones"}
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
local-tool-proxy = "proxy.server:main"

[project.urls]
Homepage = "https://github.com/cameronqj/local-tool-proxy"
Repository = "https://github.com/cameronqj/local-tool-proxy"
Issues = "https://github.com/cameronqj/local-tool-proxy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proxy*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "benchmark.py",
    "eval",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = ["E501"]
